# Traveling-Planner-With-LLM

./: .gitignore  .gitmodules  LICENSE  README.en.md  README.md  deploy.sh  docker-compose.yaml  nginx.conf  out.json  pyproject.toml
data/: merge.py  merge.sh  ouput
data/waiting_time/: getPopular_chiayi.py  get_waiting.sh  pyproject.toml  sitesData_waiting.json  waiting_time.py
data/waiting_time/dictData/: lookup.py  merge.py  table.json
data/waiting_time/dictData/food/: nopopular_notimeSpent.json  nopopular_timeSpent.json  popular_notimeSpent.json  popular_timeSpent.json  table.json  table.py
data/waiting_time/dictData/sites/: nopopular_notimeSpent.json  nopopular_timeSpent.json  popular_notimeSpent.json  popular_timeSpent.json  table.json  table.py
data/waiting_time/food/: chiayi_food_nopopular_notimeSpent.json  chiayi_food_nopopular_timeSpent.json  chiayi_food_popular_notimeSpent.json  chiayi_food_popular_timeSpent.json  cyhg_food_popular_timeSpent.json  tainan_food_nopopular_timeSpent.json  tainan_food_popular_timeSpent.json
data/waiting_time/prediction_model/: README.md
data/waiting_time/prediction_model/food/: model2.pt
data/waiting_time/prediction_model/sites/: model1.pt  newModel2.pt
data/waiting_time/sites/: chiayi_site_nopopular_notimeSpent.json  chiayi_site_nopopular_timeSpent.json  chiayi_site_popular_notimeSpent.json  chiayi_site_popular_timeSpent.json  site_analysis.py  tainan_site_nopopular_timeSpent.json
data/waiting_time/webcrab/: chiayi_food.txt  chiayi_food_title.txt  chiayi_hotel_title.txt  chiayi_sites_title.txt  tainan_sites.txt  tainan_webcrab_food.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  (+2 more)
langchain-system/: .dockerignore  2a_timeSpent_rag.py  Dockerfile  build_db.py  deploy.sh  json_splitter.py  pyproject.toml  recommended_module.py  test.sh
recommend/: Dockerfile  main.py  pyproject.toml  recommended_module.py  requirements.txt
routing/: .dockerignore  .vrptw.py.swp  Dockerfile  data_time.py  deploy.sh  distance_matrix.py  main.py  pyproject.toml  requirements.txt  routing.py  test.sh  time_window.py  vrptw.py
routing/data/: sitesData.json
(+136 files in other folders)
