[tool.poetry]
name = "langchain-system"
version = "0.1.0"
description = ""
authors = ["'isheng' <110703011@g.nccu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
