[tool.poetry]
name = "langchain-system"
version = "0.1.0"
description = ""
authors = ["'isheng' <110703011@g.nccu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-text-splitters = "^0.3.0"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
chromadb = "^0.5.15"
protobuf = "3.20.3"
langchain-core = "^0.3.12"
langchain-chroma = "^0.1.4"
llama-stack = "^0.0.47"
langchain-google-genai = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
