[tool.poetry]
name = "waiting-time"
version = "0.1.0"
description = ""
authors = ["'isheng' <110703011@g.nccu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.1.3"
populartimes = {git = "https://github.com/m-wrzr/populartimes"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
